@@ -77,7 +77,7 @@
 # Red Alert 1v3   RALT     5376 5378 5379                                    #
 # Lands of Lore 3 LOR3     6400 6401 6402 6403 6405                          #
 # Tiberian Sun XP TSXP     7168 7170 7171 7175 7424 7426 7427 7431           #
-# Emperor: BDF    EBFD     7936 7938 7939 7945 7946                          #
+# Emperor: BFD    EBFD     7936 7938 7939 7945 7946                          #
 # Red Alert 2     RAL2     8448 8450 8451 8457 8458 8960 8962 8963 8969 8970 #
 # Nox Quest       NOXQ     9472 9474 9475 9477 9478 9481                     #
 # Yuri's Revenge  YURI     10496 10498 10499 10505 10506                     #
